# rentalagent

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: planner.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: client.py  schemas.py
backend/app/services/: embeddings.py
backend/app/state/: models.py
backend/app/tools/: base.py  listings.py  search.py
backend/data/lancedb/listings.lance/_transactions/: 0-78295e2b-6592-4da6-a6fd-1bfc2fd437e0.txn  0-9ecb9f30-87bd-4275-a91f-a07d2da7e0bf.txn  0-f17a56b3-97d1-422a-94b1-fae58f665c3d.txn  1-066075a7-38f3-488e-b06b-5c97b4fcbe83.txn  1-296a5ac1-eb36-4023-887b-621a7cc10be6.txn  1-4683d30c-4c18-44ba-8241-308ab620cfbf.txn  2-c945b58c-2524-429f-b655-9bea9a5716ae.txn
backend/data/lancedb/listings.lance/_versions/: 1.manifest  2.manifest  3.manifest
backend/scripts/: evaluate_ranking.py  seed.py  seed_airbnb.py  smoke_test.py  smoke_test_phase2.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
