[project]
name = "rentalagent"
version = "0.1.0"
description = "Agentic rental search assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "lancedb>=0.14.0",
    "sentence-transformers>=3.3.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
